feat: add card inputs and button

--- a/FinanceApp/Resources/Localizable.xcstrings
+++ b/FinanceApp/Resources/Localizable.xcstrings
@@ -1,6 +1,23 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "budgets.button.add" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Add"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adicionar"
+          }
+        }
+      }
+    },
     "budgets.header.subtitle" : {
       "extractionState" : "manual",
       "localizations" : {
